.metadata/.plugins/org.eclipse.cdt.ui/uart.build.log
16:32:19 **** Incremental Build of configuration Debug for project uart ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:107:31: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  107 |                 if(strncmp((ch, "START", 5)== 0)) flagState = true;
      |                               ^
../Core/Src/main.c:107:40: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  107 |                 if(strncmp((ch, "START", 5)== 0)) flagState = true;
      |                                        ^
../Core/Src/main.c:107:44: warning: passing argument 1 of 'strncmp' makes pointer from integer without a cast [-Wint-conversion]
  107 |                 if(strncmp((ch, "START", 5)== 0)) flagState = true;
      |                            ~~~~~~~~~~~~~~~~^~~~
      |                                            |
      |                                            int
In file included from ../Core/Src/main.c:26:
C:\ST\STM32CubeIDE_1.14.1\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.11.3.rel1.win32_1.1.100.202309141235\tools\bin/../lib/gcc/arm-none-eabi/11.3.1/../../../../arm-none-eabi/include/string.h:43:19: note: expected 'const char *' but argument is of type 'int'
   43 | int      strncmp (const char *, const char *, size_t);
      |                   ^~~~~~~~~~~~
../Core/Src/main.c:107:20: error: too few arguments to function 'strncmp'
  107 |                 if(strncmp((ch, "START", 5)== 0)) flagState = true;
      |                    ^~~~~~~
In file included from ../Core/Src/main.c:26:
C:\ST\STM32CubeIDE_1.14.1\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.11.3.rel1.win32_1.1.100.202309141235\tools\bin/../lib/gcc/arm-none-eabi/11.3.1/../../../../arm-none-eabi/include/string.h:43:10: note: declared here
   43 | int      strncmp (const char *, const char *, size_t);
      |          ^~~~~~~
../Core/Src/main.c:108:31: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  108 |                 if(strncmp((ch, "STOP", 4)==0)) flagState = false;
      |                               ^
../Core/Src/main.c:108:39: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  108 |                 if(strncmp((ch, "STOP", 4)==0)) flagState = false;
      |                                       ^
../Core/Src/main.c:108:43: warning: passing argument 1 of 'strncmp' makes pointer from integer without a cast [-Wint-conversion]
  108 |                 if(strncmp((ch, "STOP", 4)==0)) flagState = false;
      |                            ~~~~~~~~~~~~~~~^~~
      |                                           |
      |                                           int
In file included from ../Core/Src/main.c:26:
C:\ST\STM32CubeIDE_1.14.1\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.11.3.rel1.win32_1.1.100.202309141235\tools\bin/../lib/gcc/arm-none-eabi/11.3.1/../../../../arm-none-eabi/include/string.h:43:19: note: expected 'const char *' but argument is of type 'int'
   43 | int      strncmp (const char *, const char *, size_t);
      |                   ^~~~~~~~~~~~
../Core/Src/main.c:108:20: error: too few arguments to function 'strncmp'
  108 |                 if(strncmp((ch, "STOP", 4)==0)) flagState = false;
      |                    ^~~~~~~
In file included from ../Core/Src/main.c:26:
C:\ST\STM32CubeIDE_1.14.1\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.11.3.rel1.win32_1.1.100.202309141235\tools\bin/../lib/gcc/arm-none-eabi/11.3.1/../../../../arm-none-eabi/include/string.h:43:10: note: declared here
   43 | int      strncmp (const char *, const char *, size_t);
      |          ^~~~~~~
../Core/Src/main.c:113:35: warning: implicit declaration of function 'sin' [-Wimplicit-function-declaration]
  113 |                         data[i] = sin((angle + i * 36) * 3.14 / 180) * 10000;
      |                                   ^~~
../Core/Src/main.c:27:1: note: include '<math.h>' or provide a declaration of 'sin'
   26 | #include <string.h>
  +++ |+#include <math.h>
   27 | /* USER CODE END Includes */
../Core/Src/main.c:113:35: warning: incompatible implicit declaration of built-in function 'sin' [-Wbuiltin-declaration-mismatch]
  113 |                         data[i] = sin((angle + i * 36) * 3.14 / 180) * 10000;
      |                                   ^~~
../Core/Src/main.c:113:35: note: include '<math.h>' or provide a declaration of 'sin'
../Core/Src/main.c:102:22: warning: variable 'ch' set but not used [-Wunused-but-set-variable]
  102 |                 char ch[6];
      |                      ^~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

16:32:20 Build Failed. 3 errors, 9 warnings. (took 783ms)

